.gradle/gradle.log
This mapping 'snapshot_20171003' was designed for MC 1.12! Use at your own peril.This mapping 'snapshot_20171003' was designed for MC 1.12! Use at your own peril.

#################################################
         ForgeGradle 2.3-SNAPSHOT-7764e3e        
  https://github.com/MinecraftForge/ForgeGradle  
#################################################
                 Powered by MCP                  
             http://modcoderpack.com             
     by: Searge, ProfMobius, R4wk, ZeuX          
     Fesh0r, IngisKahn, bspkrs, LexManos         
#################################################
:deobfCompileDummyTask
:deobfProvidedDummyTask
:sourceApiJava UP-TO-DATE
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:sourceMainJava
:compileJavaR:\GitHub\Project-S\build\sources\main\java\com\dpn\projects\ProjectS_Arcanium.java:38: error: no suitable method found for add(()->new Bl[...]tom())
        instance.blocks.add(() -> new BlockCustom());
                       ^
    method Collection.add(Supplier<Block>) is not applicable
      (argument mismatch; bad return type in lambda expression
          BlockCustom cannot be converted to Block)
    method List.add(Supplier<Block>) is not applicable
      (argument mismatch; bad return type in lambda expression
          BlockCustom cannot be converted to Block)
Note: R:\GitHub\Project-S\build\sources\main\java\com\dpn\projects\ProjectS.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 6.572 secs
